[gd_scene load_steps=2 format=3 uid="uid://dqalirl8veijf"]

[ext_resource type="Script" path="res://UI/PauseMenu.gd" id="1_b2up6"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b2up6")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.447059, 0.537255, 0.623529, 1)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.144
anchor_right = 1.0
anchor_bottom = 0.272
text = "Pausado"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Vbox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
offset_left = -45.0
offset_top = -50.0
offset_right = 46.0
offset_bottom = 50.0

[node name="Opções" type="Button" parent="Vbox"]
layout_mode = 2
size_flags_vertical = 0
focus_neighbor_bottom = NodePath("../Voltar")
focus_next = NodePath("../Voltar")
theme_override_font_sizes/font_size = 10
text = "Opções"

[node name="Voltar" type="Button" parent="Vbox"]
layout_mode = 2
size_flags_vertical = 0
focus_neighbor_top = NodePath("../Opções")
focus_neighbor_bottom = NodePath("../Smenu")
focus_next = NodePath("../Smenu")
focus_previous = NodePath("../Opções")
theme_override_font_sizes/font_size = 10
text = "Voltar"

[node name="Smenu" type="Button" parent="Vbox"]
layout_mode = 2
size_flags_vertical = 0
focus_neighbor_top = NodePath("../Voltar")
focus_neighbor_bottom = NodePath("../SJogo")
focus_next = NodePath("../SJogo")
focus_previous = NodePath("../Voltar")
theme_override_font_sizes/font_size = 10
text = "Menu Principal"

[node name="SJogo" type="Button" parent="Vbox"]
layout_mode = 2
size_flags_vertical = 0
focus_neighbor_top = NodePath("../Smenu")
focus_neighbor_bottom = NodePath("../Opções")
focus_next = NodePath("../Opções")
focus_previous = NodePath("../Smenu")
theme_override_font_sizes/font_size = 10
text = "Sair do Jogo"

[connection signal="pressed" from="Vbox/Opções" to="." method="_on_opções_pressed"]
[connection signal="pressed" from="Vbox/Voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="Vbox/Smenu" to="." method="_on_smenu_pressed"]
[connection signal="pressed" from="Vbox/SJogo" to="." method="_on_s_jogo_pressed"]
